@@ -8,6 +8,10 @@ Revision history for {{$dist->name}}
           TAP::DOM itself needs bless to call ->to_tap method)
         - new option 'document_data_prefix' to specify the prefix in
           '# Test-key: value' lines
+        - Incompatible change: de-confuse 'parse_errors'
+          * it now also contains the count of parse errors not the
+            actual messages anymore - those are now in
+            'parse_errors_msgs'
 
 0.14      2017-02-17
         - new module TAP::DOM::Archive to extract TAP::Archive files
